--- a/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attributes in dataset: ['__add__', '__annotations__', '__class__', '__class_getitem__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__len__', '__lt__', '__module__', '__ne__', '__new__', '__orig_bases__', '__parameters__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__slots__', '__str__', '__subclasshook__', '__weakref__', '_is_protocol', 'args', 'asts', 'codes', 'codes_wo_name', 'dataset_dir', 'dataset_name', 'docs', 'languages', 'mode', 'names', 'names_wo_name', 'only_names', 'paths', 'save', 'set_task', 'size', 'sources', 'split', 'subset', 'task']\n",
+      "Attributes in dataset: ['__add__', '__annotations__', '__class__', '__class_getitem__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__len__', '__lt__', '__module__', '__ne__', '__new__', '__orig_bases__', '__parameters__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__slots__', '__str__', '__subclasshook__', '__weakref__', '_is_protocol', 'args', 'asts', 'codes', 'codes_wo_name', 'dataset_dir', 'dataset_name', 'docs', 'languages', 'load_ast_from_file_jdt', 'mode', 'names', 'names_wo_name', 'only_names', 'paths', 'save', 'save_source_ast_pairs', 'set_task', 'size', 'sources', 'split', 'subset', 'task']\n",
       "Data-related attributes in dataset: ['_is_protocol', 'args', 'asts', 'codes', 'codes_wo_name', 'dataset_dir', 'dataset_name', 'docs', 'languages', 'mode', 'names', 'names_wo_name', 'only_names', 'paths', 'size', 'sources', 'split', 'task']\n"
      ]
     }
@@ -56,6 +56,41 @@
     "\n",
     "data_attributes = [attr for attr in attributes if not attr.startswith('__') and not callable(getattr(dataset, attr))]\n",
     "print(\"Data-related attributes in dataset:\", data_attributes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['file getFile ( string dirsProp , string path ) throws ioException { string [ ] dirs = getTrimmedStrings ( dirsProp ) ; int hashCode = path . hashCode ( ) ; for ( int i = 0 ; i < dirs . length ; i ++ ) { int index = ( hashCode + i & [MSK] ) % dirs . length ; file file = new file ( dirs [ index ] , path ) ; file dir = file . getParentFile ( ) ; if ( dir . exists ( ) || dir . mkdirs ( ) ) { return file ; } } throw new ioException ( \"NoValid local directories in property: \" + dirsProp ) ; }']\n",
+      "19413\n"
+     ]
+    }
+   ],
+   "source": [
+    "pickle_file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/dataset_saved/fine_tune.completion.test.pk'\n",
+    "\n",
+    "with open(pickle_file_path, 'rb') as file:\n",
+    "    dataset = pickle.load(file)\n",
+    "\n",
+    "# print(dataset.dataset_dir)\n",
+    "# print(dataset.args)\n",
+    "# print(dataset.asts)\n",
+    "\n",
+    "print(dataset.codes[:1])\n",
+    "print(len(dataset.codes))\n",
+    "\n",
+    "# print(dataset)\n",
+    "\n",
+    "# first_five_items = dataset[:2]\n",
+    "\n",
+    "# for item in first_five_items:\n",
+    "#     print(item)\n"
    ]
   },
   {
@@ -195,6 +230,164 @@
     "        print(component)\n",
     "else:\n",
     "    print(\"The 'asts' attribute is empty or does not exist.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concat cleaned method and their respective ast into a file since java is not working"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The files were concatenated successfully and saved to output_file.txt.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Open the two source files and the output file\n",
+    "with open('/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/spt-code/sources/data/asts/ast_jdt/longmethod.txt', 'r') as source_file, \\\n",
+    "     open('/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/spt-code/sources/data/asts/ast_jdt/ast_jdt.txt', 'r') as asts_file, \\\n",
+    "     open('output_file.txt', 'w') as output_file:\n",
+    "\n",
+    "    # Read lines from both files\n",
+    "    source_lines = source_file.readlines()\n",
+    "    asts_lines = asts_file.readlines()\n",
+    "\n",
+    "    # Iterate over the lines from both files\n",
+    "    for source_line, asts_line in zip(source_lines, asts_lines):\n",
+    "        # Strip newline characters and concatenate the lines with the desired format\n",
+    "        source_line_clean = source_line.replace('\"', '').strip()\n",
+    "        asts_line_clean = asts_line.strip()\n",
+    "\n",
+    "        formatted_line = f'Source: \"{source_line_clean}\", Asts: \"{asts_line_clean}\"\\n'\n",
+    "        \n",
+    "        # Write the formatted line to the output file\n",
+    "        output_file.write(formatted_line)\n",
+    "\n",
+    "print(\"The files were concatenated successfully and saved to output_file.txt.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To prepare a finetuning dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data has been processed and saved to finetune_raw_valid.jsonl.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Path to your JSON file\n",
+    "file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/java-small.val.json'\n",
+    "\n",
+    "# Open and read the file line by line (assuming each line is a separate JSON object)\n",
+    "results = []\n",
+    "with open(file_path, 'r') as file:\n",
+    "    for line in file:\n",
+    "        try:\n",
+    "            # Parse each line as a JSON object\n",
+    "            json_object = json.loads(line)\n",
+    "            # Format the desired fields\n",
+    "            formatted_string = f\"{json_object['left_context']} {json_object['target_seq']} {json_object['right_context']}\"\n",
+    "            results.append(formatted_string)\n",
+    "        except json.JSONDecodeError:\n",
+    "            print(\"Error decoding JSON from line:\", line)\n",
+    "            continue\n",
+    "\n",
+    "# Write all formatted strings to a new file\n",
+    "with open('finetune_raw_valid.txt', 'w') as output_file:\n",
+    "    for item in results:\n",
+    "        output_file.write(item + '\\n')\n",
+    "\n",
+    "print(\"Data has been processed and saved to finetune_raw_valid.txt.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total input lines read: 1309842\n",
+      "Total output lines prepared: 1309842\n",
+      "Data has been processed and saved to /home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/finetune_raw_train.txt.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import re\n",
+    "\n",
+    "# Regular expression pattern to match string literals\n",
+    "STRING_MATCHING_PATTERN = re.compile(r'([bruf]*)(\\\"\\\"\\\"|\\'\\'\\'|\\\"|\\')(?:(?!\\2)(?:\\\\.|[^\\\\]))*\\2')\n",
+    "\n",
+    "def replace_string_literal(source):\n",
+    "    \"\"\"Replace string literals in the source code with '___STR'.\"\"\"\n",
+    "    return re.sub(pattern=STRING_MATCHING_PATTERN, repl='___STR', string=source)\n",
+    "\n",
+    "# Path to your JSON file\n",
+    "file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/java-small.train.json'\n",
+    "output_file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/finetune_raw_train.txt'\n",
+    "\n",
+    "results = []  # Store the output lines here\n",
+    "\n",
+    "# Open and read the file line by line (assuming each line is a separate JSON object)\n",
+    "with open(file_path, 'r') as file:\n",
+    "    line_count = 0  # Counter for input lines\n",
+    "    for line in file:\n",
+    "        line_count += 1\n",
+    "        try:\n",
+    "            # Parse each line as a JSON object\n",
+    "            json_object = json.loads(line)\n",
+    "            # Replace string literals and concatenate the desired fields\n",
+    "            left_context = replace_string_literal(json_object['left_context']).replace('\\n', '\\\\n').replace('=', '\\\\u003d').replace(\"\\\\\", \"\\\\\\\\\").replace(\"\\\"\", \"\\\\\\\"\").replace(\"\\r\", \"\\\\r\").replace(\"\\t\", \"\\\\t\")\n",
+    "            right_context = replace_string_literal(json_object['right_context']).replace('\\n', '\\\\n').replace('=', '\\\\u003d').replace(\"\\\\\", \"\\\\\\\\\").replace(\"\\\"\", \"\\\\\\\"\").replace(\"\\r\", \"\\\\r\").replace(\"\\t\", \"\\\\t\")\n",
+    "            target_seq = replace_string_literal(json_object['target_seq']).replace('\\n', '\\\\n').replace('=', '\\\\u003d').replace(\"\\\\\", \"\\\\\\\\\").replace(\"\\\"\", \"\\\\\\\"\").replace(\"\\r\", \"\\\\r\").replace(\"\\t\", \"\\\\t\")\n",
+    "            formatted_string = f\"{left_context} {target_seq} {right_context}\"\n",
+    "            # Enclose the concatenated string in quotes\n",
+    "            enclosed_string = f\"\\\"{formatted_string}\\\"\"\n",
+    "            results.append(enclosed_string)\n",
+    "        except json.JSONDecodeError:\n",
+    "            # Log the error and append a placeholder line\n",
+    "            print(f\"Error decoding JSON on input line {line_count}\")\n",
+    "            results.append(f\"\\\"Error in JSON format on line {line_count}\\\"\")\n",
+    "\n",
+    "# Print the line counts\n",
+    "print(f\"Total input lines read: {line_count}\")\n",
+    "print(f\"Total output lines prepared: {len(results)}\")\n",
+    "\n",
+    "# Write all prepared lines to the output file\n",
+    "with open(output_file_path, 'w') as output_file:\n",
+    "    for item in results:\n",
+    "        output_file.write(item + '\\n')\n",
+    "\n",
+    "print(f\"Data has been processed and saved to {output_file_path}.\")\n"
    ]
   },
   {
