modified the logic for finetuning part

--- a/CODE-SPT-Code/preprocess/preprocess_jsonlfiles.ipynb
+++ b/CODE-SPT-Code/preprocess/preprocess_jsonlfiles.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,9 +223,9 @@
     "    with open(file_path, 'r', encoding='utf-8') as file:\n",
     "        for line in file:\n",
     "            data = json.loads(line.strip())\n",
-    "            left_context = replace_string_literal(data['left_context']).replace('\\n', '\\\\n').replace('=', '\\\\u003d').replace(\"\\\\\", \"\\\\\\\\\").replace(\"\\\"\", \"\\\\\\\"\").replace(\"\\r\", \"\\\\r\").replace(\"\\t\", \"\\\\t\")\n",
-    "            right_context = replace_string_literal(data['right_context']).replace('\\n', '\\\\n').replace('=', '\\\\u003d').replace(\"\\\\\", \"\\\\\\\\\").replace(\"\\\"\", \"\\\\\\\"\").replace(\"\\r\", \"\\\\r\").replace(\"\\t\", \"\\\\t\")\n",
-    "            target_seq = replace_string_literal(data['target_seq']).replace('\\n', '\\\\n').replace('=', '\\\\u003d').replace(\"\\\\\", \"\\\\\\\\\").replace(\"\\\"\", \"\\\\\\\"\").replace(\"\\r\", \"\\\\r\").replace(\"\\t\", \"\\\\t\")\n",
+    "            left_context = replace_string_literal(data['left_context'])\n",
+    "            right_context = replace_string_literal(data['right_context'])\n",
+    "            target_seq = replace_string_literal(data['target_seq'])\n",
     "            formatted_string = f\"{left_context} {target_seq} {right_context}\"\n",
     "            clean_code = remove_comments_and_docstrings(formatted_string)\n",
     "            source = remove_unwanted_characters(clean_code)\n",
@@ -248,29 +248,29 @@
     "            yield os.path.join(root, f)\n",
     "\n",
     "def iter_pre_train_dataset_files(lang_dir):\n",
-    "    return [file for file in iter_all_files(base=lang_dir) if file.endswith('.json')]\n",
+    "    return [file for file in iter_all_files(base=lang_dir) if file.endswith('train.json')]\n",
     "\n",
-    "# Iterate over files and print the outputs\n",
-    "file_paths = iter_pre_train_dataset_files(lang_dir)\n",
-    "for file_path in file_paths:\n",
-    "    # sources, codes, names = parse_java_json_file(file_path)\n",
-    "    sources = parse_java_json_file(file_path)\n",
-    "    # for source, code, name in zip(sources, codes, names):\n",
-    "    for source in zip(sources):\n",
-    "    #     print(f\"File: {file_path}\")\n",
-    "    #     print(f\"Method Name: {name}\")\n",
-    "          print(f\"Source Code: {source}\")\n",
-    "        # print(f\"Tokenized Code: {code}\\n\")\n",
-    "    break\n"
+    "# # Iterate over files and print the outputs\n",
+    "# file_paths = iter_pre_train_dataset_files(lang_dir)\n",
+    "# for file_path in file_paths:\n",
+    "#     # sources, codes, names = parse_java_json_file(file_path)\n",
+    "#     sources = parse_java_json_file(file_path)\n",
+    "#     # for source, code, name in zip(sources, codes, names):\n",
+    "#     for source in zip(sources):\n",
+    "#     #     print(f\"File: {file_path}\")\n",
+    "#     #     print(f\"Method Name: {name}\")\n",
+    "#           print(f\"Source Code: {source}\")\n",
+    "#         # print(f\"Tokenized Code: {code}\\n\")\n",
+    "#     break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/finetune_methods.txt'\n",
+    "output_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/finetune_methods_train_final.txt'\n",
     "\n",
     "file_paths = iter_pre_train_dataset_files(lang_dir)\n",
     "with open(output_path, 'w', encoding='utf-8') as output_file:\n",
