--- a/CODE-SPT-Code/spt-code/sources/backup/picklefileextract_new.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/backup/picklefileextract_new.ipynb
@@ -241,22 +241,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The files were concatenated successfully and saved to output_file.txt.\n"
+      "The files were concatenated successfully and saved to finetune_methods_test.txt.\n"
      ]
     }
    ],
    "source": [
     "# Open the two source files and the output file\n",
-    "with open('/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/spt-code/sources/data/asts/ast_jdt/longmethod.txt', 'r') as source_file, \\\n",
-    "     open('/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/spt-code/sources/data/asts/ast_jdt/ast_jdt.txt', 'r') as asts_file, \\\n",
-    "     open('output_file.txt', 'w') as output_file:\n",
+    "with open('/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/finetune_methods_train_final.txt', 'r') as source_file, \\\n",
+    "     open('/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/asts/finetune/asts_train.txt', 'r') as asts_file, \\\n",
+    "     open('/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/asts/finetune/finetune_methods_train.txt', 'w') as output_file:\n",
     "\n",
     "    # Read lines from both files\n",
     "    source_lines = source_file.readlines()\n",
@@ -273,7 +273,7 @@
     "        # Write the formatted line to the output file\n",
     "        output_file.write(formatted_line)\n",
     "\n",
-    "print(\"The files were concatenated successfully and saved to output_file.txt.\")\n"
+    "print(\"The files were concatenated successfully and saved to finetune_methods_test.txt.\")\n"
    ]
   },
   {
@@ -388,6 +388,35 @@
     "        output_file.write(item + '\\n')\n",
     "\n",
     "print(f\"Data has been processed and saved to {output_file_path}.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file has 1309842 lines.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the path to the JSON file\n",
+    "file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/finetune_raw/java-small-json/java-small.train.json'\n",
+    "\n",
+    "# Initialize a counter for the lines\n",
+    "line_count = 0\n",
+    "\n",
+    "# Open the file and count the lines\n",
+    "with open(file_path, 'r') as file:\n",
+    "    for line in file:\n",
+    "        line_count += 1\n",
+    "\n",
+    "# Print the number of lines in the file\n",
+    "print(f'The file has {line_count} lines.')\n"
    ]
   },
   {
