changes to debug

--- a/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attributes in dataset: ['__add__', '__annotations__', '__class__', '__class_getitem__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__len__', '__lt__', '__module__', '__ne__', '__new__', '__orig_bases__', '__parameters__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__slots__', '__str__', '__subclasshook__', '__weakref__', '_is_protocol', 'args', 'asts', 'codes', 'codes_wo_name', 'dataset_dir', 'dataset_name', 'docs', 'languages', 'load_ast_from_file_jdt', 'mode', 'names', 'names_wo_name', 'only_names', 'paths', 'save', 'save_source_ast_pairs', 'set_task', 'size', 'sources', 'split', 'subset', 'task']\n",
+      "Attributes in dataset: ['__add__', '__annotations__', '__class__', '__class_getitem__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__len__', '__lt__', '__module__', '__ne__', '__new__', '__orig_bases__', '__parameters__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__slots__', '__str__', '__subclasshook__', '__weakref__', '_is_protocol', 'args', 'asts', 'codes', 'codes_wo_name', 'dataset_dir', 'dataset_name', 'docs', 'languages', 'mode', 'names', 'names_wo_name', 'only_names', 'paths', 'save', 'set_task', 'size', 'sources', 'split', 'subset', 'task']\n",
       "Data-related attributes in dataset: ['_is_protocol', 'args', 'asts', 'codes', 'codes_wo_name', 'dataset_dir', 'dataset_name', 'docs', 'languages', 'mode', 'names', 'names_wo_name', 'only_names', 'paths', 'size', 'sources', 'split', 'task']\n"
      ]
     }
@@ -60,20 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['file getFile ( string dirsProp , string path ) throws ioException { string [ ] dirs = getTrimmedStrings ( dirsProp ) ; int hashCode = path . hashCode ( ) ; for ( int i = 0 ; i < dirs . length ; i ++ ) { int index = ( hashCode + i & [MSK] ) % dirs . length ; file file = new file ( dirs [ index ] , path ) ; file dir = file . getParentFile ( ) ; if ( dir . exists ( ) || dir . mkdirs ( ) ) { return file ; } } throw new ioException ( \"NoValid local directories in property: \" + dirsProp ) ; }']\n",
-      "19413\n"
+      "['func NewSTM ( c * v3 . Client , apply func ( STM ) error , so ... stmOption ) ( * v3 . TxnResponse , error ) { opts := & stmOptions { ctx : c . Ctx ( ) } \\n for _ , f := range so { f ( opts ) \\n } \\n if len ( opts . prefetch ) != 0 { f := apply \\n apply = func ( s STM ) error { s . Get ( opts . prefetch ... ) \\n return f ( s ) \\n } \\n } \\n return runSTM ( mkSTM ( c , opts ) , apply ) \\n }']\n",
+      "654393\n",
+      "['short_var_declaration__ unary_expression__ call_expression__ selector_expression __call_expression __unary_expression __short_var_declaration for_statement__ call_expression __for_statement if_statement__ binary_expression__ call_expression__ selector_expression __call_expression __binary_expression short_var_declaration assignment_statement__ parameter_declaration call_expression__ selector_expression selector_expression __call_expression return_statement__ call_expression __return_statement __assignment_statement __if_statement return_statement__ call_expression__ call_expression __call_expression __return_statement']\n",
+      "654393\n"
      ]
     }
    ],
    "source": [
-    "pickle_file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/dataset_saved/fine_tune.completion.test.pk'\n",
+    "pickle_file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset_backup/dataset_saved/pre_train.pk'#fine_tune.completion.java.test.pk'\n",
     "\n",
     "with open(pickle_file_path, 'rb') as file:\n",
     "    dataset = pickle.load(file)\n",
@@ -84,6 +86,10 @@
     "\n",
     "print(dataset.codes[:1])\n",
     "print(len(dataset.codes))\n",
+    "\n",
+    "\n",
+    "print(dataset.asts[:1])\n",
+    "print(len(dataset.asts))\n",
     "\n",
     "# print(dataset)\n",
     "\n",
@@ -102,18 +108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total dataset length: 654393\n",
-      "Length of sliced AST data: 181061\n",
-      "Sample AST from sliced data: local_variable_declaration local_variable_declaration if_statement__ parenthesized_expression__ binary_expression__ binary_expression __binary_expression __parenthesized_expression if_statement__ parenthesized_expression expression_statement if_statement__ parenthesized_expression__ binary_expression__ unary_expression __binary_expression __parenthesized_expression return_statement __if_statement expression_statement __if_statement expression_statement if_statement__ parenthesized_expression__ unary_expression __parenthesized_expression return_statement __if_statement __if_statement expression_statement\n",
-      "Length of sliced Code data: 181061\n",
-      "Sample Code from sliced data: protected final void fastPathOrderedEmit ( U value , boolean delayError , Disposable disposable ) { final Observer < ? super V > observer = downstream ; final SimplePlainQueue < U > q = queue ; if ( wip . get ( ) == 0 && wip . compareAndSet ( 0 , 1 ) ) { if ( q . isEmpty ( ) ) { accept ( observer , value ) ; if ( leave ( - 1 ) == 0 ) { return ; } } else { q . offer ( value ) ; } } else { q . offer ( value ) ; if ( ! enter ( ) ) { return ; } } QueueDrainHelper . drainLoop ( q , observer , delayError , disposable , this ) ; }\n"
+      "Total dataset length: 19413\n",
+      "Length of sliced AST data: 1000\n",
+      "Sample AST from sliced data: local_variable_declaration local_variable_declaration for_statement__ local_variable_declaration binary_expression update_expression local_variable_declaration__ binary_expression__ parenthesized_expression__ binary_expression__ binary_expression __binary_expression __parenthesized_expression __binary_expression __local_variable_declaration local_variable_declaration__ object_creation_expression __local_variable_declaration local_variable_declaration if_statement__ parenthesized_expression__ binary_expression __parenthesized_expression return_statement __if_statement __for_statement throw_statement__ object_creation_expression__ binary_expression __object_creation_expression __throw_statement\n",
+      "Length of sliced Code data: 1000\n",
+      "Sample Code from sliced data: file getFile ( string dirsProp , string path ) throws ioException { string [ ] dirs = getTrimmedStrings ( dirsProp ) ; int hashCode = path . hashCode ( ) ; for ( int i = 0 ; i < dirs . length ; i ++ ) { int index = ( hashCode + i & [MSK] ) % dirs . length ; file file = new file ( dirs [ index ] , path ) ; file dir = file . getParentFile ( ) ; if ( dir . exists ( ) || dir . mkdirs ( ) ) { return file ; } } throw new ioException ( \"NoValid local directories in property: \" + dirsProp ) ; }\n"
      ]
     }
    ],
@@ -122,8 +128,8 @@
     "print(\"Total dataset length:\", len(dataset))\n",
     "\n",
     "#Java Code lines index\n",
-    "index_start = 45423\n",
-    "index_end = 226484\n",
+    "index_start = 0\n",
+    "index_end = 1000\n",
     "\n",
     "if hasattr(dataset, 'asts') and isinstance(dataset.asts, list):\n",
     "    sliced_asts = dataset.asts[index_start:index_end]  # Adjust indices as needed\n",
@@ -198,12 +204,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9820\n",
+      "Type of 'asts': <class 'list'>\n",
+      "Sample of 'asts': local_variable_declaration return_statement__ binary_expression__ binary_expression__ binary_expression__ binary_expression__ binary_expression binary_expression __binary_expression binary_expression __binary_expression binary_expression __binary_expression binary_expression __binary_expression binary_expression__ binary_expression__ binary_expression binary_expression __binary_expression binary_expression __binary_expression __return_statement\n",
+      "Unique components in 'asts':\n",
+      "__array_creation_expression\n",
+      "__assert_statement\n",
+      "__assignment_expression\n",
+      "__binary_expression\n",
+      "__cast_expression\n",
+      "__class_declaration\n",
+      "__do_statement\n",
+      "__enhanced_for_statement\n",
+      "__expression_statement\n",
+      "__for_statement\n",
+      "__if_statement\n",
+      "__labeled_statement\n",
+      "__local_variable_declaration\n",
+      "__object_creation_expression\n",
+      "__parenthesized_expression\n",
+      "__return_statement\n",
+      "__switch_expression\n",
+      "__synchronized_statement\n",
+      "__ternary_expression\n",
+      "__throw_statement\n",
+      "__try_statement\n",
+      "__unary_expression\n",
+      "__while_statement\n",
+      "array_creation_expression\n",
+      "array_creation_expression__\n",
+      "assert_statement\n",
+      "assert_statement__\n",
+      "assignment_expression\n",
+      "assignment_expression__\n",
+      "binary_expression\n",
+      "binary_expression__\n",
+      "break_statement\n",
+      "cast_expression\n",
+      "cast_expression__\n",
+      "class_declaration__\n",
+      "continue_statement\n",
+      "do_statement__\n",
+      "enhanced_for_statement__\n",
+      "expression_statement\n",
+      "expression_statement__\n",
+      "field_declaration\n",
+      "for_statement__\n",
+      "if_statement__\n",
+      "instanceof_expression\n",
+      "labeled_statement__\n",
+      "local_variable_declaration\n",
+      "local_variable_declaration__\n",
+      "object_creation_expression\n",
+      "object_creation_expression__\n",
+      "parenthesized_expression\n",
+      "parenthesized_expression__\n",
+      "return_statement\n",
+      "return_statement__\n",
+      "switch_expression__\n",
+      "synchronized_statement__\n",
+      "ternary_expression\n",
+      "ternary_expression__\n",
+      "throw_statement\n",
+      "throw_statement__\n",
+      "try_statement__\n",
+      "unary_expression\n",
+      "unary_expression__\n",
+      "update_expression\n",
+      "while_statement__\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "filename = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/dataset_saved/fine_tune.summarization.java.test.pk'\n",
+    "import pickle\n",
+    "filename = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset_backup/dataset_saved/fine_tune.completion.valid.pk'\n",
     "# filename = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/dataset_saved/pre_train.pk'\n",
     "\n",
     "with open(filename, 'rb') as file:\n",
@@ -231,6 +312,13 @@
     "else:\n",
     "    print(\"The 'asts' attribute is empty or does not exist.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
