--- a/CODE-SPT-Code/spt-code/sources/backup/summarize_methods.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/backup/summarize_methods.ipynb
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 5), (6, 10), (11, 15), (16, 20), (21, 25), (26, 30), (31, 35), (36, 40), (41, 45), (46, 50), (51, 55), (56, 60), (61, 65), (66, 70), (71, 75), (76, 80), (81, 85), (86, 90), (91, 95), (96, 100), (101, 105), (106, 110), (111, 115), (116, 120), (121, 125), (126, 130), (131, 135), (136, 140), (141, 145), (146, 150), (151, 155), (156, 160), (161, 165), (166, 170), (171, 175), (176, 180), (181, 185), (186, 190), (191, 195), (196, 200), (201, 205), (206, 210), (211, 215), (216, 220), (221, 225), (226, 230), (231, 235), (236, 240), (241, 245), (251, 260), (261, 270), (271, 280), (281, 290), (291, 300), (301, 310), (311, 320), (321, 330), (331, 340), (341, 350), (351, 360), (361, 370), (371, 380), (381, 390), (391, 400), (401, 410), (411, 420), (421, 430), (431, 440), (441, 450), (451, 460), (461, 470), (471, 480), (481, 490), (491, 500), (501, 510), (511, 520)]\n",
+      "[(1, 5), (6, 10), (11, 15), (16, 20), (21, 25), (26, 30), (31, 35), (36, 40), (41, 45), (46, 50), (51, 55), (56, 60), (61, 65), (66, 70), (71, 75), (76, 80), (81, 85), (86, 90), (91, 95), (96, 100), (101, 105), (106, 110), (111, 115), (116, 120), (121, 125), (126, 130), (131, 135), (136, 140), (141, 145), (146, 150), (151, 155), (156, 160), (161, 165), (166, 170), (171, 175), (176, 180), (181, 185), (186, 190), (191, 195), (196, 200), (201, 205), (206, 210), (211, 215), (216, 220), (221, 225), (226, 230), (231, 235), (236, 240), (241, 245), (251, 260), (261, 270), (271, 280), (281, 290), (291, 300), (301, 310), (311, 320), (321, 330), (331, 340), (341, 350), (351, 360), (361, 370), (371, 380), (381, 390), (391, 400), (401, 410), (411, 420), (421, 430), (431, 440), (441, 450), (451, 460), (461, 470), (471, 480), (481, 490), (491, 500), (501, 510), (511, 520), (520, 1000)]\n",
       "Summarized data has been written to 'summarized_methods.csv'.\n"
      ]
     }
@@ -112,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
