--- a/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
+++ b/CODE-SPT-Code/spt-code/sources/picklefileextract_new.ipynb
@@ -31,15 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attributes in dataset: ['__add__', '__annotations__', '__class__', '__class_getitem__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__len__', '__lt__', '__module__', '__ne__', '__new__', '__orig_bases__', '__parameters__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__slots__', '__str__', '__subclasshook__', '__weakref__', '_is_protocol', 'args', 'asts', 'codes', 'codes_wo_name', 'dataset_dir', 'dataset_name', 'docs', 'languages', 'mode', 'names', 'names_wo_name', 'only_names', 'paths', 'save', 'set_task', 'size', 'sources', 'split', 'subset', 'task']\n",
-      "Data-related attributes in dataset: ['_is_protocol', 'args', 'asts', 'codes', 'codes_wo_name', 'dataset_dir', 'dataset_name', 'docs', 'languages', 'mode', 'names', 'names_wo_name', 'only_names', 'paths', 'size', 'sources', 'split', 'task']\n"
+      "Attributes in dataset: ['EOS_TOKEN', 'MSK_TOKEN', 'PAD_TOKEN', 'SEP_TOKEN', 'SOS_TOKEN', 'START_VOCAB', 'UNK_TOKEN', '_Vocab__special_symbols', '__class__', '__contains__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__len__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'add_special_symbols', 'decode', 'decode_batch', 'encode_batch', 'encode_sequence', 'eos_processor', 'get_eos_index', 'get_index', 'get_mask_index', 'get_pad_index', 'get_sos_index', 'get_token', 'get_unk_index', 'ignore_case', 'index_offset', 'method', 'name', 'num_special_token', 'pad_token_id', 'restore_index', 'save', 'save_pickle', 'save_pretrained', 'sep_processor', 'sos_processor', 'tokenizer', 'transfer_index']\n",
+      "Data-related attributes in dataset: ['EOS_TOKEN', 'MSK_TOKEN', 'PAD_TOKEN', 'SEP_TOKEN', 'SOS_TOKEN', 'START_VOCAB', 'UNK_TOKEN', '_Vocab__special_symbols', 'eos_processor', 'ignore_case', 'index_offset', 'method', 'name', 'pad_token_id', 'sep_processor', 'sos_processor', 'tokenizer']\n"
      ]
     }
    ],
@@ -60,22 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['func NewSTM ( c * v3 . Client , apply func ( STM ) error , so ... stmOption ) ( * v3 . TxnResponse , error ) { opts := & stmOptions { ctx : c . Ctx ( ) } \\n for _ , f := range so { f ( opts ) \\n } \\n if len ( opts . prefetch ) != 0 { f := apply \\n apply = func ( s STM ) error { s . Get ( opts . prefetch ... ) \\n return f ( s ) \\n } \\n } \\n return runSTM ( mkSTM ( c , opts ) , apply ) \\n }']\n",
-      "654393\n",
-      "['short_var_declaration__ unary_expression__ call_expression__ selector_expression __call_expression __unary_expression __short_var_declaration for_statement__ call_expression __for_statement if_statement__ binary_expression__ call_expression__ selector_expression __call_expression __binary_expression short_var_declaration assignment_statement__ parameter_declaration call_expression__ selector_expression selector_expression __call_expression return_statement__ call_expression __return_statement __assignment_statement __if_statement return_statement__ call_expression__ call_expression __call_expression __return_statement']\n",
-      "654393\n"
+      "['@ Override public ImageSource apply ( ImageSource input ) { final int [ ] [ ] pixelMatrix = new int [ 3 ] [ 3 ] ; int w = input . getWidth ( ) ; int h = input . getHeight ( ) ; int [ ] [ ] output = new int [ h ] [ w ] ; for ( int j = 1 ; j < h - 1 ; j ++ ) { for ( int i = 1 ; i < w - 1 ; i ++ ) { pixelMatrix [ 0 ] [ 0 ] = input . getR ( i - 1 , j - 1 ) ; pixelMatrix [ 0 ] [ 1 ] = input . getRGB ( i - 1 , j ) ; pixelMatrix [ 0 ] [ 2 ] = input . getRGB ( i - 1 , j + 1 ) ; pixelMatrix [ 1 ] [ 0 ] = input . getRGB ( i , j - 1 ) ; pixelMatrix [ 1 ] [ 2 ] = input . getRGB ( i , j + 1 ) ; pixelMatrix [ 2 ] [ 0 ] = input . getRGB ( i + 1 , j - 1 ) ; pixelMatrix [ 2 ] [ 1 ] = input . getRGB ( i + 1 , j ) ; pixelMatrix [ 2 ] [ 2 ] = input . getRGB ( i + 1 , j + 1 ) ; int edge = ( int ) convolution ( pixelMatrix ) ; int rgb = ( edge << 16 | edge << 8 | edge ) ; output [ j ] [ i ] = rgb ; } } MatrixSource source = new MatrixSource ( output ) ; return source ; }']\n",
+      "164273\n",
+      "['local_variable_declaration__ array_creation_expression __local_variable_declaration local_variable_declaration local_variable_declaration local_variable_declaration__ array_creation_expression __local_variable_declaration for_statement__ local_variable_declaration binary_expression__ binary_expression __binary_expression update_expression for_statement__ local_variable_declaration binary_expression__ binary_expression __binary_expression update_expression expression_statement__ assignment_expression__ binary_expression binary_expression __assignment_expression __expression_statement expression_statement__ assignment_expression__ binary_expression __assignment_expression __expression_statement expression_statement__ assignment_expression__ binary_expression binary_expression __assignment_expression __expression_statement expression_statement__ assignment_expression__ binary_expression __assignment_expression __expression_statement expression_statement__ assignment_expression__ binary_expression __assignment_expression __expression_statement expression_statement__ assignment_expression__ binary_expression binary_expression __assignment_expression __expression_statement expression_statement__ assignment_expression__ binary_expression __assignment_expression __expression_statement expression_statement__ assignment_expression__ binary_expression binary_expression __assignment_expression __expression_statement local_variable_declaration__ cast_expression __local_variable_declaration local_variable_declaration__ parenthesized_expression__ binary_expression__ binary_expression__ binary_expression binary_expression __binary_expression __binary_expression __parenthesized_expression __local_variable_declaration expression_statement__ assignment_expression __expression_statement __for_statement __for_statement local_variable_declaration__ object_creation_expression __local_variable_declaration return_statement']\n",
+      "164273\n"
      ]
     }
    ],
    "source": [
-    "pickle_file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset_backup/dataset_saved/pre_train.pk'#fine_tune.completion.java.test.pk'\n",
+    "pickle_file_path = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset_backup/dataset_saved/fine_tune.search.java.train.pk'#fine_tune.completion.java.test.pk'\n",
     "\n",
     "with open(pickle_file_path, 'rb') as file:\n",
     "    dataset = pickle.load(file)\n",
@@ -204,87 +204,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9820\n",
-      "Type of 'asts': <class 'list'>\n",
-      "Sample of 'asts': local_variable_declaration return_statement__ binary_expression__ binary_expression__ binary_expression__ binary_expression__ binary_expression binary_expression __binary_expression binary_expression __binary_expression binary_expression __binary_expression binary_expression __binary_expression binary_expression__ binary_expression__ binary_expression binary_expression __binary_expression binary_expression __binary_expression __return_statement\n",
-      "Unique components in 'asts':\n",
-      "__array_creation_expression\n",
-      "__assert_statement\n",
-      "__assignment_expression\n",
-      "__binary_expression\n",
-      "__cast_expression\n",
-      "__class_declaration\n",
-      "__do_statement\n",
-      "__enhanced_for_statement\n",
-      "__expression_statement\n",
-      "__for_statement\n",
-      "__if_statement\n",
-      "__labeled_statement\n",
-      "__local_variable_declaration\n",
-      "__object_creation_expression\n",
-      "__parenthesized_expression\n",
-      "__return_statement\n",
-      "__switch_expression\n",
-      "__synchronized_statement\n",
-      "__ternary_expression\n",
-      "__throw_statement\n",
-      "__try_statement\n",
-      "__unary_expression\n",
-      "__while_statement\n",
-      "array_creation_expression\n",
-      "array_creation_expression__\n",
-      "assert_statement\n",
-      "assert_statement__\n",
-      "assignment_expression\n",
-      "assignment_expression__\n",
-      "binary_expression\n",
-      "binary_expression__\n",
-      "break_statement\n",
-      "cast_expression\n",
-      "cast_expression__\n",
-      "class_declaration__\n",
-      "continue_statement\n",
-      "do_statement__\n",
-      "enhanced_for_statement__\n",
-      "expression_statement\n",
-      "expression_statement__\n",
-      "field_declaration\n",
-      "for_statement__\n",
-      "if_statement__\n",
-      "instanceof_expression\n",
-      "labeled_statement__\n",
-      "local_variable_declaration\n",
-      "local_variable_declaration__\n",
-      "object_creation_expression\n",
-      "object_creation_expression__\n",
-      "parenthesized_expression\n",
-      "parenthesized_expression__\n",
-      "return_statement\n",
-      "return_statement__\n",
-      "switch_expression__\n",
-      "synchronized_statement__\n",
-      "ternary_expression\n",
-      "ternary_expression__\n",
-      "throw_statement\n",
-      "throw_statement__\n",
-      "try_statement__\n",
-      "unary_expression\n",
-      "unary_expression__\n",
-      "update_expression\n",
-      "while_statement__\n"
+      "5173\n",
+      "The 'asts' attribute does not exist.\n",
+      "The 'asts' attribute is empty or does not exist.\n"
      ]
     }
    ],
    "source": [
     "import pickle\n",
-    "filename = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset_backup/dataset_saved/fine_tune.completion.valid.pk'\n",
+    "filename = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset_backup/dataset_saved/fine_tune.search.java.valid.pk'\n",
     "# filename = '/home/user1-selab3/Documents/research-shradha/CODE-SPT-Code/dataset/dataset_saved/pre_train.pk'\n",
     "\n",
     "with open(filename, 'rb') as file:\n",
